[#104] refactor : Configuring the correct swagger context for the consumers
Material: https://nimb.ws/JdbUaO
